codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Switch account or provider
  Saved logins are reused. Add each account once.

  ›
› Personal ✓                   OpenAI
  Work                         OpenAI
  Family                       OpenAI
  Alternate                    OpenAI
  GitHub Copilot               GitHub Copilot
  Add OpenAI account…
  Add GitHub Copilot account…

  ↑/↓ choose · enter confirm · esc back
