codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_selection_popup_compact.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "format!(\"{compact_buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 6 },
    content: [
        "                                                                                ",
        "  Select Provider                                                               ",
        "                                                                                ",
        "› 1. OpenAI ✓        Use your OpenAI account                                    ",
        "  2. GitHub Copilot  Use your GitHub account                                    ",
        "  ↑/↓ choose · enter confirm · esc back                                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 34, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
