codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_switch_loading_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Switching account or provider
  Preparing GitHub Copilot for this conversation.

     Loading models and session state...

  esc back
