codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_reset_popup_states.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "states.join(\"\\n---\\n\")"
---
  Usage limit resets
  Checking your available resets...

     Loading...

  esc back
---
  Usage limit resets
  2 usage limit resets available.

› 1. Full reset (Weekly + 5 hr)  Expires 09:39 on 18 Jun 2026.
  2. Full reset (Weekly + 5 hr)  Expires 08:59 on 27 Jun 2026.
  3. Cancel

  ↑/↓ choose · enter confirm · esc back
---
  Usage limit resets
  You don't have any usage limit resets available.

› 1. Close

  ↑/↓ choose · enter confirm · esc back
---
  Usage limit resets
  Couldn't load usage limit resets. Please try again.

› 1. Try again
  2. Close

  ↑/↓ choose · enter confirm · esc back
---
  Usage limit resets
  Resetting your usage...

     Using a reset...
---
  Usage limit resets
  Couldn't reset usage. Please try again.

› 1. Try again
  2. Close

  ↑/↓ choose · enter confirm · esc back
---
  Usage limit resets
  Your usage does not need a reset right now.

› 1. Close

  ↑/↓ choose · enter confirm · esc back
---
  Usage limit resets
  No usage limit resets are available.

› 1. Close

  ↑/↓ choose · enter confirm · esc back
---
  Usage limit resets
  Usage reset. Checking your remaining resets...

     Refreshing...
---
  Usage limit resets
  Usage reset. You have 1 usage limit reset left.

› 1. Close

  ↑/↓ choose · enter confirm · esc back
